--- a/Backend/Gemfile
+++ b/Backend/Gemfile
@@ -3,7 +3,7 @@ source "https://rubygems.org"
 ruby "3.1.0"
 
 # Bundle edge Rails instead: gem "rails", github: "rails/rails", branch: "main"
-gem "rails", "~> 7.1.3", ">= 7.1.3.2"
+gem "rails", "~> 7.1.0"
 
 # The original asset pipeline for Rails [https://github.com/rails/sprockets-rails]
 # gem "sprockets-rails"
@@ -70,7 +70,7 @@ group :development do
   # Speed up commands on slow machines / big apps [https://github.com/rails/spring]
   # gem "spring"
 
-  gem "error_highlight", ">= 0.4.0", platforms: [:ruby] unless RUBY_VERSION >= "3.1"
+  gem "error_highlight", ">= 0.4.0", platforms: [:ruby]
 end
 
 group :test do
@@ -83,4 +83,4 @@ gem 'faker', '~> 3.2'
 
 gem "sidekiq", "~> 7.3"
 
-gem "rack-cors", "~> 3.0"
+gem "rack-cors", "~> 2.0"
