--- a/Backend/Gemfile
+++ b/Backend/Gemfile
@@ -84,3 +84,12 @@ gem 'faker', '~> 3.2'
 gem "sidekiq", "~> 7.3"
 
 gem "rack-cors", "~> 2.0"
+
+# AWS SDK for Kinesis
+gem "aws-sdk-kinesis", "~> 1.0"
+
+# For user agent parsing
+gem "user_agent_parser", "~> 2.8"
+
+# AWS X-Ray for distributed tracing
+gem "aws-xray-sdk", "~> 0.12"
