feat : Implementing SQS queue

--- a/Backend/Gemfile
+++ b/Backend/Gemfile
@@ -37,7 +37,7 @@ gem "puma", ">= 5.0"
 # gem "jbuilder"
 
 # Use Redis adapter to run Action Cable in production
-# gem "redis", ">= 4.0.1"
+gem "redis", ">= 4.0.1"
 
 # Use Kredis to get higher-level data types in Redis [https://github.com/rails/kredis]
 # gem "kredis"
@@ -87,6 +87,9 @@ gem "rack-cors", "~> 2.0"
 
 # AWS SDK for Kinesis
 gem "aws-sdk-kinesis", "~> 1.0"
+
+# AWS SDK for SQS
+gem "aws-sdk-sqs", "~> 1.0"
 
 # For user agent parsing
 gem "user_agent_parser", "~> 2.8"
